fix images on mobile

--- a/assets/linker/styles/custom.less
+++ b/assets/linker/styles/custom.less
@@ -589,6 +589,10 @@ background-color: #fff;
     width: 10%;
   }
 
+  #home-section1, #main-section1, #catering-section1, #virtual-section1, #express-section1{
+    background-attachment: scroll;
+  }
+
   .section-desc{
     padding-left: 20px;
     padding-right: 20px;
